# Touhou-doujin

./: CMakeLists.txt  README.md  main.cpp  prefix.h
Engine/: AudioManager.cpp  AudioManager.h  CameraManager.cpp  CameraManager.h  Component.cpp  Component.h  EffectManager.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  SceneManager.cpp  SceneManager.h  UIManager.cpp  UIManager.h  animation.cpp  animation.h  camera.cpp  camera.h  collider.cpp  collider.h  config.cpp  config.h  context.cpp  context.h  effects.h  engine.cpp  engine.h  graphapi.cpp  graphapi.h  maths.cpp  maths.h  model.cpp  model.h  render.cpp  render.h  resources.cpp  resources.h  scene.cpp  scene.h  (+7 more)
Engine/Components/: AnimationComponent.cpp  AnimationComponent.h  ColliderComponent.cpp  ColliderComponent.h  EffectComponent.h  PlayerComponent.cpp  PlayerComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Components/States/: PlayerState.cpp  PlayerState.h
Engine/D3D/: model.h
Engine/D3D/Shader/: ps_3dbase.hlsl  ps_sprite.hlsl  vs_3dbase.hlsl  vs_sprite.hlsl
Game/: Bullet.h  Enemy.h  Game.cpp  Game.h  GameData.h  GameScene.cpp  GameScene.h  Player.h  StateMachine.h  resources.cpp  resources.h
Game/Bullet/: Bullet.cpp  Bullet.h  BulletComponent.cpp  BulletComponent.h  BulletManager.cpp  BulletManager.h
Game/Enemy/: Enemy.cpp  Enemy.h  EnemyComponent.cpp  EnemyComponent.h  EnemyManager.cpp  EnemyManager.h
Game/Item/: Item.h  ItemManager.cpp  ItemManager.h
Game/Player/: Idel.cpp  Idel.h  Move.cpp  Move.h  Player.cpp  Player.h  PlayerBulletManager.cpp  PlayerBulletManager.h  Slow.cpp  Slow.h
Game/Player/Players/: Reimu.cpp  Reimu.h
Game/Scene/: HelpScene.cpp  HelpScene.h  Loading.cpp  Loading.h  Menu.h  Stage.cpp  Stage.h  TitleScene.cpp  TitleScene.h  UI.cpp
Game/Scene/UIPanel/: ChoosePanel.h  InformationPanel.cpp  InformationPanel.h  MainPanel.cpp  MainPanel.h  OptionPanel.cpp  OptionPanel.h  OverPanel.cpp  OverPanel.h  PausePanel.cpp  PausePanel.h  PlayerDataPanel.cpp  PlayerDataPanel.h  ScorePanel.cpp  ScorePanel.h
Game/Script/: ScriptBackGround.cpp  ScriptBackGround.h  ScriptLevel.cpp  ScriptLevel.h
data/: ascii.json  bullet_config.json  enemy_config.json  information_panel.json  input_config.json  item_config.json  main_panel.json  option_panel.json  pause_panel.json  player_config.json  player_data_panel.json  resource.json  score_panel.json  stage.json
include/lib/: freetype.lib
include/spdlog/fmt/bundled/: format-inl.h  format.h
resources/lua_scripts/: common.lua  enemy.lua  stage.lua  stagebcg.lua  task.lua
resources/shader/: ps_3dbase.hlsl  vs_3dbase.hlsl  vs_sprite.hlsl
